# project-tree-manager

./: .releaserc  CHANGELOG.md  Cargo.toml  README.md  release.sh  releaserc.json
.github/workflows/: release.yaml  versioning.yaml
src/: cli.rs  file.rs  generate.rs  lib.rs  main.rs  tree_generator.rs  update.rs  utils.rs
src/generate/: generator.rs  mod.rs  tree.rs
src/update/: download.rs  inplace.rs  mod.rs  update.rs
tests/: main.rs
tests/cli/: helpers.rs  main.rs  tree_generator.rs
